Fixed gap between header and nav bar. Organized code a bit. Added possible background image.

--- a/styles/main.css
+++ b/styles/main.css
@@ -195,7 +195,7 @@ nav ul {
 }
 
 nav {
-	margin-top: -4px;
+	margin-top: -5px;
 }
 
 .button {
@@ -305,6 +305,77 @@ footer {
 
 footer img {
   margin: 12px;
+}
+
+/*slide in effect for jQuery*/
+
+.rightAlign {
+  float: right;
+}
+
+.leftAlign {
+  float: left;
+}
+
+.animateBlock {
+  margin-top: 20px;
+  display: inline-block;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  position: relative;
+  -webkit-transition: all .55s ease-in;
+  -moz-transition: all .55s ease-in;
+  -ms-transition: all .55s ease-in;
+  -o-transition: all .55s ease-in;
+  transition: all .55s ease-in;
+}
+
+.animateBlock.left {
+  left: -20%;
+}
+
+.animateBlock.right {
+  right: -20%;
+}
+
+.left.animated {
+  left: 0%;
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.right.animated {
+  right: 0%;
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+#Txt {
+  width: 300px;
+  padding-left: 15px;
+  padding-top: 12px;
+  text-align: center;
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+
+.clearfix {
+  display: inline-block;
+}
+
+html[xmlns] .clearfix {
+  display: block;
+}
+
+* html .clearfix {
+  height: 1%;
 }
 
 /*-------- Media Queries -----------*/
